--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,90 +1,169 @@
-body {
-  background: #66ccff;
+body, html {
   margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-.container {
-  position: relative;
-  margin: 0 auto;
-  width: 94%;
-  max-width: 1100px;
-  font-family: helvetica, sans-serif;
-}
-.content {
-  position: relative;
-  padding-top: 80px;
-}
-.content p {
-  margin-bottom: 10px;
-}
-#header {
-  z-index: 2;
-  position: fixed;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background: #222;
-  color: white;
-}
-#header h1 {
-  top: 0px;
-  margin: 0px;
-  text-transform: uppercase;
-  font-size: 1.2em;
-}
-#nav {
-  position: absolute;
-  right: 0;
-  top: -15px;
-  height: 60px;
-}
-#nav ul li {
-  float: left;
-  list-style: none;
-}
-#nav ul li a {
-  display: block;
-  color: white;
-  text-decoration: none;
-  padding: 0 10px;
+  height: 100%;
 }
 
-@media (max-width: 599px) {
-  #header .container {
+body {
+  font-family: 'Abel', sans-serif;
+  font-size: 12px;
+  color: #424242;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0;
+}
+
+header, nav, footer, section, article, div {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+/*
+ *
+ * Common
+ *
+ */
+
+.news__more {
+  float: right;
+  font-size: .8em;
+  color: #333;
+  text-decoration: none;
+}
+
+
+/*
+ *
+ * Header
+ *
+ */
+
+.header {
+  width: 100%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  min-height: 56px;
+  transition: min-height 0.3s;
+}
+
+.header__inner {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header__logo {
+  height: 40px;
+  margin-right: 1em;
+  vertical-align: top;
+  margin-top: 12px;
+}
+
+.header__title {
+  font-weight: 300;
+  font-size: 2.3em;
+  margin: 0.5em 0.25em;
+  display: inline-block;
+  color: #212121;
+}
+
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  width: 100%;
+  min-height: 100px;
+}
+
+.main-graph-1 {
+  background-color: blue;
+}
+
+.der1-graph-1 {
+  background-color: red;
+}
+
+.der2-graph-1 {
+  background-color: green;
+}
+
+.main-graph-2 {
+  background-color: #FF4900;
+}
+
+.der1-graph-2 {
+  background-color: #770CDD;
+}
+
+.der2-graph-2 {
+  background-color: #D00B6E;
+}
+
+
+/*Media Queries*/
+
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  .box {
     width: 100%;
+    min-height: 150px;
   }
-  #header h1 {
-    padding-left: 3%;
+
+  .der1-graph-1 {
+    width: 50%;
   }
-  #nav {
+
+  .der2-graph-1 {
+    width: 50%;
+  }
+
+  .der1-graph-2 {
+    width: 50%;
+  }
+
+  .der2-graph-2 {
+    width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 901px) {
+
+  .container {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .box {
     width: 100%;
-    top: 60px;
+    min-height: 150px;
   }
-  #nav:before {
-    content: '\2630';
-    display: block;
-    position: absolute;
-    right: 3%;
-    top: -50px;
-    line-height: 40px;
-    font-size: 1.4em;
-    cursor: pointer;
+
+  .main-graph-1 {
+    width: 50%
   }
-  #nav ul {
-    background: #222;
-    width: 100%;
-    margin: 0px;
+
+  #container2 {
+    width: 50%
   }
-  #nav ul li {
-    float: none;
+
+  .main-graph-2 {
+    width: 50%
   }
-  #nav ul li a {
-    padding: 10px 3%;
-    line-height: 20px;
-    border-top: 1px solid #333;
+
+  #container3 {
+    width: 50%
   }
+
 }
