--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,6 +92,9 @@ ul {
 
 .der1-graph-1 {
   background-color: red;
+  color = 'white';
+  font-size: 40px;
+  text-align: center;
 }
 
 .der2-graph-1 {
