--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,6 @@ body, html {
 body {
   font-family: 'Abel', sans-serif;
   font-size: 12px;
-  color: #424242;
 }
 
 h1, h2, h3, h4, h5 {
@@ -32,12 +31,6 @@ ul {
  *
  */
 
-.news__more {
-  float: right;
-  font-size: .8em;
-  color: #333;
-  text-decoration: none;
-}
 
 
 /*
@@ -71,6 +64,7 @@ ul {
   font-size: 2.3em;
   margin: 0.5em 0.25em;
   display: inline-block;
+  text-align: center;
   color: #212121;
 }
 
@@ -92,9 +86,18 @@ ul {
 
 .der1-graph-1 {
   background-color: red;
-  color = 'white';
-  font-size: 40px;
   text-align: center;
+}
+
+#date{
+  font-size: 20px;
+  padding: 0;
+  margin-top: 10px;
+}
+#clock{
+  font-size: 40px;
+  padding: 0;
+  margin-top: 20px;
 }
 
 .der2-graph-1 {
