--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,6 +96,7 @@ ul {
 
 .der2-graph-1 {
   background-color: green;
+  padding-bottom: 0;
 }
 
 .main-graph-2 {
@@ -145,6 +146,13 @@ ul {
   margin: 0 20px;
 }
 
+
+.der2-graph-1 iframe {
+	top: 0;
+	left: 0;
+	width: 450px;
+	height: 270px;
+}
 
 
 /*Media Queries*/
