--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,12 +95,17 @@ ul {
 }
 
 .der2-graph-1 {
-  background-color: green;
-  padding-bottom: 0;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
 }
 
 .main-graph-2 {
-  background-color: #FF4900;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
 }
 
 .der1-graph-2 {
@@ -148,10 +153,20 @@ ul {
 
 
 .der2-graph-1 iframe {
-	top: 0;
-	left: 0;
-	width: 450px;
-	height: 270px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+.main-graph-2 iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
