--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,7 +75,7 @@ ul {
 
 .main-graph-1 {
   text-align: center;
-  padding: 0;
+  padding-right: 18px;
 }
 
 .der1-graph-1 {
@@ -119,7 +119,7 @@ ul {
 
 
 #weather {
-  width: 425px;
+  padding-top: 60px;
   margin: 0px auto;
   text-align: center;
   text-transform: uppercase;
@@ -172,7 +172,7 @@ ul {
 
 /*Media Queries*/
 
-@media only screen and (min-width: 600px) and (max-width: 900px) {
+@media only screen and (min-width: 600px) and (max-width: 1200px) {
   .box {
     width: 100%;
     min-height: 150px;
@@ -196,10 +196,10 @@ ul {
 
 }
 
-@media only screen and (min-width: 901px) {
+@media only screen and (min-width: 1201px) {
 
   .container {
-    width: 900px;
+    width: 1200px;
     margin-left: auto;
     margin-right: auto;
   }
