--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,7 +109,10 @@ ul {
 }
 
 .der1-graph-2 {
-  background-color: #D00B6E;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
 }
 
 .der2-graph-2 {
@@ -163,7 +166,20 @@ ul {
   height: 100%;
 }
 
-.der2-graph-2 iframe {
+#twitter-widget-0{
+   height: 100% !important;
+}
+
+.der2-graph-2 iframe{
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-bottom: 1px !important;
+}
+
+.der1-graph-2 iframe{
   position: absolute;
   top: 0;
   left: 0;
@@ -171,7 +187,6 @@ ul {
   height: 100%;
   margin-bottom: 1px;
 }
-
 
 .main-graph-2 iframe {
   position: absolute;
