--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,24 +31,40 @@ ul {
  *
  */
 
+ .instruction-container{
+   margin-top: 50px;
+ }
+
+ .instruction-container h2{
+   font-size: 30px;
+ }
+
+ .instruction-container p{
+   font-size: 20px;
+ }
+
+.footer p{
+  margin-top: 200px;
+}
 .header {
   width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   min-height: 56px;
   transition: min-height 0.3s;
+  display: flex;
+}
+
+.header a{
+  width: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
 }
 
 .header__inner {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-}
-
-.header__logo {
-  height: 40px;
-  margin-right: 1em;
-  vertical-align: top;
-  margin-top: 12px;
 }
 
 .header__title {
